<resources>
    <string name="app_name">GitHubSample</string>

    <!-- Commons Messages -->
    <string name="msg_loading">Loading…</string>
    <string name="msg_empty_list">List is empty</string>

    <!-- Common Errors -->
    <string name="error_unknown">Unknown error</string>
    <string name="error_network">Network error</string>
    <string name="error_bad_request">400 Bad Request</string>
    <string name="error_forbidden">403 Forbidden</string>
    <string name="error_not_found">404 Not Found</string>
    <string name="error_method_not_allowed">405 Method Not Allowed</string>
    <string name="error_server">500 Server Error</string>

    <!-- Users -->
    <string name="users_title">Users</string>
    <string name="users_favorites">Favorites</string>

    <!-- User Details -->
    <string name="user_details_login">Login:</string>
    <string name="user_details_name">Name:</string>
    <string name="user_details_location">Location:</string>
    <string name="user_details_public_repos">Public repos:</string>
    <string name="user_details_followers">Followers:</string>
    <string name="user_details_following">Following:</string>
    <string name="user_details_add_to_favorites">Add to Favorites</string>
    <string name="user_details_added_to_favorites">Added to Favorites</string>

    <!-- Favorites -->
    <string name="favorites_title">Favorites</string>
</resources>
